// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots HeroArea Normal 1`] = `
<div
  className="sc-bdVaJa eoPsJS"
>
  HeroArea
</div>
`;

exports[`Storyshots HeroArea Personality Hero Area 1`] = `
<div
  className="sc-bdVaJa eoPsJS"
>
  <div
    className="sc-bwzfXH cmXBzf"
  >
    personality list
    <hr
      className="sc-htpNat jVvlcI"
    />
    過去にラジオに出演したメンバーをご紹介します
  </div>
</div>
`;
